--- a/packages/core/src/components/Checkbox/src/index.css
+++ b/packages/core/src/components/Checkbox/src/index.css
@@ -31,7 +31,7 @@
 
 [data-scope='checkbox'][data-part='box-control'] {
   border: var(--spacing-px) solid var(--color-checkbox-primary-box-control-border-default);
-  border-radius: var(--spacing-0_5);
+  border-radius: var(--spacing-0-5);
   cursor: pointer;
   display: inline-block;
   /* calc(1.8 * 10px) = 18px = 1.125rem ≈ var(--spacing-4) */
