--- a/packages/core/src/components/Chip/src/index.css
+++ b/packages/core/src/components/Chip/src/index.css
@@ -17,7 +17,7 @@
     justify-content: space-between;
     background-color: var(--color-chip-primary-default);
     border-radius: var(--radius-full);
-    gap: var(--spacing-1_5);
+    gap: var(--spacing-1-5);
     color: var(--color-chip-primary-on-default);
     padding: var(--spacing-2) var(--spacing-3);
   }
