--- a/packages/core/src/components/Counter/src/index.css
+++ b/packages/core/src/components/Counter/src/index.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     border-radius: var(--radius-sm);
-    padding: var(--spacing-0_5);
+    padding: var(--spacing-0-5);
     font-size: var(--text-xs);
     color: var(--color-counter-primary-on-default);
     background-color: var(--color-counter-primary-default);
